Finished another section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
+    <!-- Font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- General css link -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -40,29 +43,53 @@
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('webDev')">Web development</p>
                         <p class="tab-links" onclick="openTab('design')">Design</p>
-                        <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                        <p class="tab-links" onclick="openTab('education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="webDev">
                         <ul>
                             <li><span>HTML / (S)CSS</span><br>Creating beautiful interfaces</li>
                             <li><span>JavaScript</span><br>Adding logic to projects</li>
+                            <li><span>Framworks</span><br>Angular, Bootstrap(Css)</li>
                             <li><span>Git</span><br>Working in teams with git</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="design">
                         <ul>
-                            <li><span>2022 - Now</span><br>Frontend Bootcamp</li>
-                            <li><span>2021 - 2022</span><br>Fachinformatiker für Anwendungsentwicklung</li>
-                            <li><span>2019 - 2021</span><br>Stellvertretender Filialleiter</li>
+                            <li><span>Figma</span><br>Good knowledge</li>
+                            <li><span>User Experience</span><br>Knowing how to create comfttorble User Experience</li>
+                            <li><span>User Interface</span><br>Able to create appealing designs</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="experience">
+                    <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span></span><br>Designing Web/App interfaces</li>
+                            <li><span>2022 - Current</span><br>Web Development Bootcamp</li>
+                            <li><span>2021 - 2022</span><br>Fachinformatiker für Anwendungsentwicklung</li>
                             <li><span>2016 - 2019</span><br>Kaufmann im Einzelhandel</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---------- My Specialties section ---------->
+    <div id="specialties">
+        <div class="container">
+            <h1 class="sub-title">My Specialties</h1>
+            <div class="specialties-list">
+                <div>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-crop-simple"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
                 </div>
             </div>
         </div>
