Completed my work section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,39 @@
             </div>
         </div>
     </div>
+    <!---------- Portfolio section ---------->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="./images/work-1.png">
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./images/work-2.png">
+                    <div class="layer">
+                        <h3>Food delivery App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./images/work-3.png">
+                    <div class="layer">
+                        <h3>Note App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See more</a>
+        </div>
+    </div>
     <!-- JavaScript link -->
     <script src="./script.js"></script>
 </body>
