--- a/index.html
+++ b/index.html
@@ -127,6 +127,34 @@
             <a href="#" class="btn">See more</a>
         </div>
     </div>
+    <!---------- Contact section ---------->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> jdedic1999@gmail.com</p>
+                    <p><i class="fa-solid fa-square-phone"></i> 017620138831</p>
+                    <div class="social-icons">
+                        <a href="https://github.com/jasmindedic"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                     <a href="./images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright <i class="fa-solid fa-copyright"></i> Jasmin. Made with <i class="fa-solid fa-heart"></i> by Jasmin Dedic</p>
+        </div>
+    </div>
     <!-- JavaScript link -->
     <script src="./script.js"></script>
 </body>
