Finished contact form functionality

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                      <a href="./images/my-cv.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form action="https://jasmindedic.github.io/Personal-Portfolio/contact/send_mail.php" method="post">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <form name="portfolio contact form">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
                 </div>
@@ -159,5 +159,6 @@
     </div>
     <!-- JavaScript link -->
     <script src="./script.js"></script>
+    <script src="./contact.js"></script>
 </body>
 </html>
