Added media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Frontend Developer</p>
-                <h1>Hi, I'm <span>Jasmin</span><br>Dedic From Germany</h1>
+                <h1>Hi, I'm <span>Jasmin</span><br>Dedic From <span class="germany">Germany</span></h1>
             </div>
         </div>
     </div>
