--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Personal Portfolio Website</title>
     <!-- Font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--AOS link-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- General css link -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -25,7 +27,7 @@
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
-            <div class="header-text">
+            <div class="header-text" data-aos="fade-right" data-aos-duration="1400" data-aos-mirror="true">
                 <p>Frontend Developer</p>
                 <h1>Hi, I'm <span>Jasmin</span><br>Dedic From <span class="germany">Germany</span></h1>
             </div>
@@ -35,12 +37,12 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
+                <div class="about-col-1" data-aos="fade-right" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/about-me.png">
                 </div>
-                <div class="about-col-2">
+                <div class="about-col-2" data-aos="fade-left" data-aos-duration="1300" data-aos-mirror="true">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, possimus accusamus? Numquam expedita in tempora sunt. Dolorem quisquam cupiditate iste, numquam quae minus similique praesentium qui corrupti fuga ea at deserunt, quam suscipit. Soluta, delectus officia! Asperiores quasi dolore perspiciatis, eos quisquam fugit non excepturi?</p>
+                    <p>I am a German-speaking web developer with experience in developing web applications with modern technologies. You can find my projects that include responsive websites and business apps in my public portfolio. </p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('webDev')">Web development</p>
@@ -49,22 +51,23 @@
                     </div>
                     <div class="tab-contents active-tab" id="webDev">
                         <ul>
-                            <li><span>HTML / (S)CSS</span><br>Creating beautiful interfaces</li>
+                            <li><span>HTML / (S)CSS</span><br>Able to create beautiful interfaces</li>
                             <li><span>JavaScript</span><br>Adding logic to projects</li>
-                            <li><span>Framworks</span><br>Angular, Bootstrap(Css)</li>
-                            <li><span>Git</span><br>Working in teams with git</li>
+                            <li><span>Framworks</span><br>(Angular), Bootstrap(Css)</li>
+                            <li><span>Git</span><br>Experienced in Git workflow</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="design">
                         <ul>
                             <li><span>Figma</span><br>Good knowledge</li>
-                            <li><span>User Experience</span><br>Knowing how to create comfttorble User Experience</li>
+                            <li><span>Gimp (Photo editing tool)</span><br>Basic knowledge</li>
+                            <li><span>User Experience</span><br>Knowing the importance of User Experience</li>
                             <li><span>User Interface</span><br>Able to create appealing designs</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2022 - Current</span><br>Web Development Bootcamp</li>
+                            <li><span>2022 - Current</span><br>Web Development Bootcamp (Developer Akademie)</li>
                             <li><span>2021 - 2022</span><br>Fachinformatiker für Anwendungsentwicklung</li>
                             <li><span>2016 - 2019</span><br>Kaufmann im Einzelhandel</li>
                         </ul>
@@ -78,20 +81,20 @@
         <div class="container">
             <h1 class="sub-title">My Specialties</h1>
             <div class="specialties-list">
-                <div>
+                <div data-aos="flip-up" data-aos-duration="1300" data-aos-mirror="true">
                     <i class="fa-brands fa-css3-alt"></i>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
+                    <p>I love to create beautiful and responsive web interfaces. I'm able to use modern web design technologies to create appealing websites with the user in mind.</p>
                 </div>
-                <div>
+                <div data-aos="flip-up" data-aos-duration="1300" data-aos-mirror="true">
                     <i class="fa-solid fa-crop-simple"></i>
                     <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
+                    <p>Thanks to my experience in web development, I can put myself in the role of the user very well. Thats why i exactly know how important the user experience is.</p>
                 </div>
-                <div>
+                <div data-aos="flip-up" data-aos-duration="1300" data-aos-mirror="true">
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Development</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis esse. Nam consequuntur atque eius! Sequi modi officiis eius dolorum!</p>
+                    <p>In the last few months i learned a lot about web development. I know how to use modern web technologies to create beautiful and responsive web apps.</p>
                 </div>
             </div>
         </div>
@@ -101,49 +104,49 @@
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
-                <div class="work">
+                <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <p>This app represents a instagram imitation. </p>
+                        <a href="https://jasmindedic.github.io/instagram-clone/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/work-2.png">
                     <div class="layer">
                         <h3>Food delivery App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <p>This app represents a liefrando clone.</p>
+                        <a href="https://jasmindedic.github.io/lieferando-clone/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/work-3.png">
                     <div class="layer">
-                        <h3>Note App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ad mollitia eaque inventore fuga modi!</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Modern Website</h3>
+                        <p>Modern looking, responsive website</p>
+                        <a href="https://jasmindedic.github.io/headphone-website/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="https://github.com/jasmindedic" target="_blank" class="btn">See more</a>
         </div>
     </div>
     <!---------- Contact section ---------->
     <div id="contact">
         <div class="container">
             <div class="row">
-                <div class="contact-left">
+                <div class="contact-left" data-aos="fade-right" data-aos-duration="1300" data-aos-mirror="true">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> jdedic1999@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> 017620138831</p>
                     <div class="social-icons">
-                        <a href="https://github.com/jasmindedic"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/jasmindedic" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="www.linkedin.com/in/jasmin-dedic" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                      <a href="./images/my-cv.pdf" download class="btn btn2">Download CV</a>
                 </div>
-                <div class="contact-right">
+                <div class="contact-right" data-aos="fade-left" data-aos-duration="1300" data-aos-mirror="true">
                     <form name="portfolio contact form">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
@@ -161,5 +164,10 @@
     <!-- JavaScript link -->
     <script src="./script.js"></script>
     <script src="./contact.js"></script>
+    <!--Aos JavaScript link-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
