--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Personal Portfolio Website</title>
     <!-- Font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon link -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--AOS link-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- General css link -->
@@ -144,7 +146,7 @@
                         <a href="https://github.com/jasmindedic" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="www.linkedin.com/in/jasmin-dedic" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                     <a href="./images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                     <a href="./images/CV-UX.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right" data-aos="fade-left" data-aos-duration="1300" data-aos-mirror="true">
                     <form name="portfolio contact form">
