--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <a href="https://github.com/jasmindedic" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="www.linkedin.com/in/jasmin-dedic" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                     <a href="./images/CV-UX.pdf" download class="btn btn2">Download CV</a>
+                     <a href="./images/CV-General.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right" data-aos="fade-left" data-aos-duration="1300" data-aos-mirror="true">
                     <form name="portfolio contact form">
