Changed displayed portfolio project

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                 <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/work-3.png">
                     <div class="layer">
-                        <h3>Modern Website</h3>
-                        <p>Modern looking, responsive website</p>
-                        <a href="https://jasmindedic.github.io/headphone-website/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Pokedex</h3>
+                        <p>Fetching all data through PokeApi</p>
+                        <a href="https://jasmindedic.github.io/Pokedex/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
