Changed portfolio project

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
                     <img src="./images/work-1.png">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>This app represents a instagram imitation. </p>
-                        <a href="https://jasmindedic.github.io/instagram-clone/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Sharkie</h3>
+                        <p>This project represents a jump an run game. </p>
+                        <a href="https://jasmindedic.github.io/Sharkie_Game/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work" data-aos="flip-down" data-aos-duration="1300" data-aos-mirror="true">
